--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     </p>
     <img src="man_united_logo.png" alt="Manchester United Logo">
 
-    <a href="/" class="bn5">Explore More</a>
+    <a href="/" class="bn5">Feedback</a>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/3y6n4ZloSYk" 
       title="Manchester United Highlights" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
@@ -182,7 +182,7 @@
   </main>
 
   <footer>
-    <p>Thank you for looking at this website go above if you want to feedback :)</p>
+    <p>Thank you for looking at this website! If you want to feedback press the "feedback" button if you want to rate the website and feedback :)</p>
   </footer>
 
   <button onclick="topFunction()" id="backToTopBtn" title="Go to top">↑</button>
