--- a/index.html
+++ b/index.html
@@ -5,203 +5,201 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Manchester United Fan Page</title>
   <style>
-    /* Body Styling */
-    body {
+    /* General Reset */
+    * {
       margin: 0;
       padding: 0;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: linear-gradient(135deg, #ff0000, #ffe600);
-      color: #fff;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: start;
+      box-sizing: border-box;
     }
 
-    /* Header Section */
-    header {
-      padding: 20px;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.8);
+    /* Body Styling */
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #ff0000, #ffe600);
       color: #fff;
-      text-align: center;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+      overflow-x: hidden;
+    }
+
+    /* Navigation Bar */
+    nav {
       position: fixed;
       top: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.9);
+      padding: 10px 20px;
       z-index: 1000;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 15px;
+      font-size: 1rem;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #ffe600;
+    }
+
+    /* Hero Section */
+    header {
+      text-align: center;
+      padding: 100px 20px 50px;
     }
 
     header h1 {
-      margin: 0;
-      font-size: 2.5rem;
+      font-size: 3rem;
       text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
     }
 
-    /* Main Content */
-    main {
-      margin-top: 100px;
-      padding: 20px;
-      text-align: center;
-      width: 100%;
-      max-width: 1200px;
-    }
-
-    /* Paragraph Styling */
-    p {
-      margin: 20px auto;
+    header p {
       font-size: 1.2rem;
-      line-height: 1.8;
-      max-width: 800px;
-      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+      margin: 20px 0;
     }
 
-    /* Logo Styling */
-    img {
-      margin: 20px auto;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-      width: 200px;
-      height: auto;
+    header img {
+      width: 150px;
+      margin-top: 20px;
+      transition: transform 0.3s;
     }
 
-    /* Buttons */
-    .bn5 {
-      padding: 0.8em 2.5em;
-      border: none;
-      color: #fff;
-      background: #111;
-      cursor: pointer;
-      position: relative;
-      z-index: 0;
-      border-radius: 10px;
-      font-size: 1rem;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .bn5:before {
-      content: "";
-      background: linear-gradient(45deg, #ff0000, #ff7300, #ffe600, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
-      position: absolute;
-      top: -2px;
-      left: -2px;
-      background-size: 400%;
-      z-index: -1;
-      filter: blur(8px);
-      width: calc(100% + 4px);
-      height: calc(100% + 4px);
-      animation: glowing 20s linear infinite;
-      opacity: 0;
-      transition: opacity 0.3s ease-in-out;
-      border-radius: 10px;
-    }
-
-    @keyframes glowing {
-      0% {
-        background-position: 0 0;
-      }
-      50% {
-        background-position: 400% 0;
-      }
-      100% {
-        background-position: 0 0;
-      }
-    }
-
-    .bn5:hover:before {
-      opacity: 1;
-    }
-
-    .bn5:hover {
+    header img:hover {
       transform: scale(1.1);
     }
 
-    /* YouTube Video */
+    /* Section Styling */
+    section {
+      padding: 50px 20px;
+      text-align: center;
+    }
+
+    section:nth-child(even) {
+      background: rgba(0, 0, 0, 0.8);
+    }
+
+    section h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+
+    section p {
+      font-size: 1.1rem;
+      max-width: 800px;
+      margin: 0 auto 20px;
+    }
+
+    /* Video Styling */
     iframe {
-      margin: 30px 0;
       border: none;
-      border-radius: 15px;
+      border-radius: 10px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
       width: 90%;
       max-width: 560px;
     }
 
+    /* Buttons */
+    .btn {
+      display: inline-block;
+      padding: 10px 20px;
+      background: #111;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 5px;
+      transition: background 0.3s, transform 0.3s;
+    }
+
+    .btn:hover {
+      background: #ff7300;
+      transform: scale(1.05);
+    }
+
     /* Footer */
     footer {
-      margin-top: auto;
-      padding: 10px 20px;
-      width: 100%;
       background: rgba(0, 0, 0, 0.9);
-      color: #fff;
+      padding: 20px;
       text-align: center;
       font-size: 0.9rem;
+      margin-top: 30px;
     }
 
-    /* Back to Top Button */
-    #backToTopBtn {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: linear-gradient(135deg, #007bff, #0056b3);
-      color: white;
-      border: none;
-      border-radius: 50%;
-      padding: 15px;
-      font-size: 18px;
-      cursor: pointer;
-      display: none; /* Hidden by default */
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-      transition: transform 0.3s, background-color 0.3s;
+    footer a {
+      color: #fff;
+      margin: 0 10px;
+      text-decoration: none;
+      font-size: 1.2rem;
+      transition: color 0.3s;
     }
 
-    #backToTopBtn:hover {
-      background-color: #004c99;
-      transform: scale(1.2);
+    footer a:hover {
+      color: #ffe600;
     }
   </style>
 </head>
 <body>
+
+  <!-- Navigation Bar -->
+  <nav>
+    <div>
+      <a href="#about">About</a>
+      <a href="#history">History</a>
+      <a href="#highlights">Highlights</a>
+    </div>
+    <div>
+      <a href="#feedback">Feedback</a>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
   <header>
     <h1>Manchester United: The Best Football Club</h1>
+    <p>I mean who does not love this club</p>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Manchester_United_FC_crest.svg/1200px-Manchester_United_FC_crest.svg.png" alt="Manchester United Logo">
   </header>
-  
-  <main>
+
+  <!-- About Section -->
+  <section id="about">
+    <h2>About</h2>
     <p>
-      Manchester United, famously known as the "Red Devils," is one of the most celebrated football clubs in history. With a legacy spanning over a century, the club has secured numerous prestigious titles, including 20 English league championships and three UEFA Champions League victories. Old Trafford, the iconic "Theatre of Dreams," has witnessed the rise of football legends like George Best, Eric Cantona, and Cristiano Ronaldo. Known for its attacking flair, youth development, and never-say-die spirit, Manchester United remains a symbol of passion and excellence for millions of fans worldwide.
+      Manchester United, famously known as the "Red Devils," is one of the most celebrated football clubs in history. 
+      Known for their attacking style, youth development, and iconic stadium, Old Trafford, they have captured the hearts of millions globally.
     </p>
-    <img src="man_united_logo.png" alt="Manchester United Logo">
+  </section>
 
-    <a href="/" class="bn5">Feedback</a>
+  <!-- History Section -->
+  <section id="history">
+    <h2>History</h2>
+    <p>
+      With a legacy spanning over a century, Manchester United boasts 20 English league championships, 12 FA Cups, and 3 UEFA Champions League victories. 
+      Legendary players like George Best, Wayne Rooney, and Cristiano Ronaldo have graced the club's history.
+    </p>
+  </section>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/3y6n4ZloSYk" 
-      title="Manchester United Highlights" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-    </iframe>
-  </main>
+  <!-- Highlights Section -->
+  <section id="highlights">
+    <h2>Highlights</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/3y6n4ZloSYk" title="Manchester United Highlights" allowfullscreen></iframe>
+  </section>
 
+  <!-- Feedback Section -->
+  <section id="feedback">
+    <h2>Give Us Your Feedback</h2>
+    <p>We would love to hear from you! Click the button below to share your thoughts.</p>
+    <a href="https://forms.gle/a1b2c3D4eF5g6H7i8J" class="btn" target="_blank">Feedback</a>
+  </section>
+
+  <!-- Footer -->
   <footer>
-    <p>Thank you for looking at this website! If you want to feedback press the "feedback" button if you want to rate the website and feedback :)</p>
+    <p>Follow us on:</p>
+    <a href="https://twitter.com" target="_blank">Twitter</a>
+    <a href="https://facebook.com" target="_blank">Facebook</a>
+    <a href="https://instagram.com" target="_blank">Instagram</a>
+    <p>&copy; 2024 Manchester United Fan Page</p>
   </footer>
 
-  <button onclick="topFunction()" id="backToTopBtn" title="Go to top">↑</button>
-
-  <script>
-    // Back to Top Button
-    let backToTopBtn = document.getElementById("backToTopBtn");
-
-    window.onscroll = function () {
-      if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-        backToTopBtn.style.display = "block";
-      } else {
-        backToTopBtn.style.display = "none";
-      }
-    };
-
-    function topFunction() {
-      window.scrollTo({ top: 0, behavior: 'smooth' });
-    }
-  </script>
 </body>
 </html>
