--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div>
       <a href="#about">About</a>
       <a href="#history">History</a>
-      <a href="#highlights">Highlights</a>
+      <a href="#highlights">Videos</a>
     </div>
     <div>
       <a href="#feedback">Feedback</a>
