--- a/index.html
+++ b/index.html
@@ -165,8 +165,7 @@
   <section id="about">
     <h2>About</h2>
     <p>
-      Manchester United, famously known as the "Red Devils," is one of the most celebrated football clubs in history. 
-      Known for their attacking style, youth development, and iconic stadium, Old Trafford, they have captured the hearts of millions globally.
+      Manchester United, (AKA "Red Devils") is one of the greatest clubs of all time as they have great legends such as Cristiano Ronaldo, Wayne Rooney, Eric Cantona and many more. The stadium of Manchester United is called "Old Trafford" which is located in Manchester, England. Old Trafford is known as "The Theatre Of Dreams". It is known as The Theatre Of Dreams because its the place where you follow your dreams, glory and happiness. This is where Manchester United has built their heart winning history.
     </p>
   </section>
 
@@ -174,31 +173,27 @@
   <section id="history">
     <h2>History</h2>
     <p>
-      With a legacy spanning over a century, Manchester United boasts 20 English league championships, 12 FA Cups, and 3 UEFA Champions League victories. 
-      Legendary players like George Best, Wayne Rooney, and Cristiano Ronaldo have graced the club's history.
+      Manchester United has won many trophies , have many legends and have had many unforgettable games. The club has won 13 Premier League titles, 3 Champions League titles and 13 FA cups. Their rivalries are Liverpool being the top rival, Manchester City and Arsenal. Manchester United has made awesome comebacks and goals mostly against these clubs. 
     </p>
   </section>
 
   <!-- Highlights Section -->
   <section id="highlights">
-    <h2>Highlights</h2>
+    <h2>Videos</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/3y6n4ZloSYk" title="Manchester United Highlights" allowfullscreen></iframe>
   </section>
 
   <!-- Feedback Section -->
   <section id="feedback">
-    <h2>Give Us Your Feedback</h2>
-    <p>We would love to hear from you! Click the button below to share your thoughts.</p>
+    <h2>Give me your feedback</h2>
+    <p>If you want you can give me a feedback by pressing the "feedback" button below :)</p>
     <a href="https://forms.gle/a1b2c3D4eF5g6H7i8J" class="btn" target="_blank">Feedback</a>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>Follow us on:</p>
-    <a href="https://twitter.com" target="_blank">Twitter</a>
-    <a href="https://facebook.com" target="_blank">Facebook</a>
-    <a href="https://instagram.com" target="_blank">Instagram</a>
-    <p>&copy; 2024 Manchester United Fan Page</p>
+    <p>Thank you for looking at this website!</p>
+    
   </footer>
 
 </body>
