--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   <section id="about">
     <h2>About</h2>
     <p class="glow">
-      Manchester United, (AKA "Red Devils") is one of the greatest clubs of all time as they have great legends such as Cristiano Ronaldo, Wayne Rooney, Eric Cantona, and many more. The stadium of Manchester United is called "Old Trafford" which is located in Manchester, England. 
+      Manchester United, (AKA "Red Devils") is one of the greatest clubs of all time as they have great legends such as Cristiano Ronaldo, Wayne Rooney, Eric Cantona, and many more. The stadium of Manchester United is called "Old Trafford" which is located in Manchester, England. Old Trafford is known as "The Theatre Of Dreams". It is known as this because its the place where you follow your dreams, glory and happiness. Old Trafford or should I say The Theatre Of Dreams is where Manchester United has built their heart winning history.
     </p>
   </section>
 
