--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
   <section id="history">
     <h2>History</h2>
     <p class="glow">
-      Manchester United has won many trophies, have many legends and have had unforgettable games. The club has won 13 Premier League titles, 3 Champions League titles, and 13 FA Cups. 
+      Manchester United has won many trophies, have many legends and have had unforgettable games. The club has won 13 Premier League titles, 3 Champions League titles, and 13 FA Cups. They had a great and respective manager named Sir "Alexander Ferguson" who carried them for 27 years (26 seasons) and made them the spotlight for a long time.
     </p>
   </section>
 
@@ -197,9 +197,9 @@
 
   <!-- Feedback Section -->
   <section id="feedback">
-    <h2>Give me your feedback</h2>
-    <p class="glow">If you want you can give me feedback by pressing the "feedback" button below :)</p>
-    <a href="https://forms.gle/a1b2c3D4eF5g6H7i8J" class="btn" target="_blank">Feedback</a>
+    <h2>Explore the Manchester United Official Website</h2>
+    <p class="glow">If you want you can go to the official website to book tickets and buy from the store!</p>
+    <a href="https://www.manutd.com/" class="btn" target="_blank">Explore</a>
   </section>
 
   <!-- Footer -->
