--- a/index.html
+++ b/index.html
@@ -67,14 +67,17 @@
       margin: 20px 0;
     }
 
-    header img {
+    /* Glow Effect for Logo */
+    header img.glow {
       width: 150px;
       margin-top: 20px;
-      transition: transform 0.3s;
+      transition: transform 0.3s, text-shadow 0.3s;
+      text-shadow: 0 0 10px #ffe600, 0 0 20px #ffe600, 0 0 30px #ff7300;
     }
 
-    header img:hover {
+    header img.glow:hover {
       transform: scale(1.1);
+      text-shadow: 0 0 15px #ffe600, 0 0 30px #ffe600, 0 0 40px #ff7300;
     }
 
     /* Section Styling */
@@ -170,7 +173,7 @@
   <header>
     <h1>Manchester United: The Best Football Club</h1>
     <p class="glow">I mean who does not love this club</p>
-    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7a/Manchester_United_FC_crest.svg/1200px-Manchester_United_FC_crest.svg.png" alt="Manchester United Logo">
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7a/Manchester_United_FC_crest.svg/1200px-Manchester_United_FC_crest.svg.png" alt="Manchester United Logo" class="glow">
   </header>
 
   <!-- About Section -->
