--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   <!-- Feedback Section -->
   <section id="feedback">
     <h2>Explore the Manchester United Official Website</h2>
-    <p class="glow">If you want you can go to the official website to book tickets and buy from the store!</p>
+    <p class="glow">If you want you can go to the official website to book tickets, see the players and buy Man United kits!</p>
     <a href="https://www.manutd.com/" class="btn" target="_blank">Explore</a>
   </section>
 
