--- a/index.html
+++ b/index.html
@@ -67,17 +67,14 @@
       margin: 20px 0;
     }
 
-    /* Glow Effect for Logo */
-    header img.glow {
+    header img {
       width: 150px;
       margin-top: 20px;
-      transition: transform 0.3s, text-shadow 0.3s;
-      text-shadow: 0 0 10px #ffe600, 0 0 20px #ffe600, 0 0 30px #ff7300;
+      transition: transform 0.3s;
     }
 
-    header img.glow:hover {
+    header img:hover {
       transform: scale(1.1);
-      text-shadow: 0 0 15px #ffe600, 0 0 30px #ffe600, 0 0 40px #ff7300;
     }
 
     /* Section Styling */
@@ -165,7 +162,7 @@
       <a href="#highlights" class="glow">Videos</a>
     </div>
     <div>
-      <a href="#feedback" class="glow">Feedback</a>
+      <a href="#feedback" class="glow">Official Website</a>
     </div>
   </nav>
 
@@ -173,7 +170,7 @@
   <header>
     <h1>Manchester United: The Best Football Club</h1>
     <p class="glow">I mean who does not love this club</p>
-    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7a/Manchester_United_FC_crest.svg/1200px-Manchester_United_FC_crest.svg.png" alt="Manchester United Logo" class="glow">
+    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7a/Manchester_United_FC_crest.svg/1200px-Manchester_United_FC_crest.svg.png" alt="Manchester United Logo">
   </header>
 
   <!-- About Section -->
@@ -201,7 +198,7 @@
   <!-- Feedback Section -->
   <section id="feedback">
     <h2>Explore the Manchester United Official Website</h2>
-    <p class="glow">If you want you can go to the official website to book tickets, see the players and buy Man United kits!</p>
+    <p class="glow">If you want you can go to the official website to book tickets and buy from the store!</p>
     <a href="https://www.manutd.com/" class="btn" target="_blank">Explore</a>
   </section>
 
