--- a/index.html
+++ b/index.html
@@ -1,211 +1,289 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Manchester United Fan Page</title>
-  <style>
-    /* General Reset */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Manchester United Fan Page</title>
+    <style>
+      /* General Reset */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
 
-    /* Body Styling */
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #ff0000, #ffe600);
-      color: #fff;
-      overflow-x: hidden;
-    }
+      /* Body Styling */
+      body {
+        font-family: Arial, sans-serif;
+        background: linear-gradient(135deg, #ff0000, #ffe600);
+        color: #fff;
+        overflow-x: hidden;
+      }
 
-    /* Glow Effect */
-    .glow {
-      text-shadow: 0 0 5px #ffe600, 0 0 10px #ffe600, 0 0 20px #ffe600;
-    }
+      /* Glow Effect */
+      .glow {
+        text-shadow:
+          0 0 5px #ffe600,
+          0 0 10px #ffe600,
+          0 0 20px #ffe600;
+      }
 
-    /* Navigation Bar */
-    nav {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.9);
-      padding: 10px 20px;
-      z-index: 1000;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-    }
+      /* Navigation Bar */
+      nav {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        background: rgba(0, 0, 0, 0.9);
+        padding: 10px 20px;
+        z-index: 1000;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+      }
 
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin: 0 15px;
-      font-size: 1rem;
-      transition: color 0.3s;
-    }
+      nav a {
+        color: #fff;
+        text-decoration: none;
+        margin: 0 15px;
+        font-size: 1rem;
+        transition: color 0.3s;
+      }
 
-    nav a:hover {
-      color: #ffe600;
-    }
+      nav a:hover {
+        color: #ffe600;
+      }
 
-    /* Hero Section */
-    header {
-      text-align: center;
-      padding: 100px 20px 50px;
-    }
+      /* Hero Section */
+      header {
+        text-align: center;
+        padding: 100px 20px 50px;
+        position: relative;
+        display: inline-block;
+      }
 
-    header h1 {
-      font-size: 3rem;
-      text-shadow: 0 0 10px #ffe600, 0 0 20px #ffe600, 0 0 30px #ff7300;
-    }
+      header h1 {
+        font-size: 3rem;
+        text-shadow:
+          0 0 10px #ffe600,
+          0 0 20px #ffe600,
+          0 0 30px #ff7300;
+      }
 
-    header p {
-      font-size: 1.2rem;
-      margin: 20px 0;
-    }
+      header p {
+        font-size: 1.2rem;
+        margin: 20px 0;
+      }
 
-    header img {
-      width: 150px;
-      margin-top: 20px;
-      transition: transform 0.3s;
-    }
+      header img {
+        width: 150px;
+        margin-top: 20px;
+        transition: transform 0.3s, box-shadow 0.3s;
+        box-shadow: 0 0 10px #ffe600, 0 0 20px #ffe600, 0 0 30px #ff7300;
+      }
 
-    header img:hover {
-      transform: scale(1.1);
-    }
+      header img:hover {
+        transform: scale(1.1);
+        box-shadow: 0 0 15px #ffe600, 0 0 30px #ffe600, 0 0 45px #ff7300;
+      }
 
-    /* Section Styling */
-    section {
-      padding: 50px 20px;
-      text-align: center;
-    }
+      /* Animated Glow Rings Around the Logo */
+      header::before,
+      header::after {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 200px;
+        height: 200px;
+        border: 5px solid rgba(255, 230, 0, 0.8);
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        animation: pulse 2s infinite ease-in-out;
+        z-index: -1;
+      }
 
-    section:nth-child(even) {
-      background: rgba(0, 0, 0, 0.8);
-    }
+      header::after {
+        width: 250px;
+        height: 250px;
+        border-color: rgba(255, 115, 0, 0.8);
+        animation-delay: 1s;
+      }
 
-    section h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      text-shadow: 0 0 10px #ff7300, 0 0 20px #ff7300, 0 0 30px #ffe600;
-    }
+      /* Pulse Animation */
+      @keyframes pulse {
+        0%, 100% {
+          transform: translate(-50%, -50%) scale(0.9);
+          opacity: 1;
+        }
+        50% {
+          transform: translate(-50%, -50%) scale(1.1);
+          opacity: 0.5;
+        }
+      }
 
-    section p {
-      font-size: 1.1rem;
-      max-width: 800px;
-      margin: 0 auto 20px;
-      text-shadow: 0 0 5px #ffe600, 0 0 10px #ffe600;
-    }
+      /* Section Styling */
+      section {
+        padding: 50px 20px;
+        text-align: center;
+      }
 
-    /* Video Styling */
-    iframe {
-      border: none;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
-      width: 90%;
-      max-width: 560px;
-    }
+      section:nth-child(even) {
+        background: rgba(0, 0, 0, 0.8);
+      }
 
-    /* Buttons */
-    .btn {
-      display: inline-block;
-      padding: 10px 20px;
-      background: #111;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: background 0.3s, transform 0.3s;
-      text-shadow: 0 0 5px #ffe600, 0 0 10px #ffe600;
-    }
+      section h2 {
+        font-size: 2rem;
+        margin-bottom: 20px;
+        text-shadow:
+          0 0 10px #ff7300,
+          0 0 20px #ff7300,
+          0 0 30px #ffe600;
+      }
 
-    .btn:hover {
-      background: #ff7300;
-      transform: scale(1.05);
-    }
+      section p {
+        font-size: 1.1rem;
+        max-width: 800px;
+        margin: 0 auto 20px;
+        text-shadow:
+          0 0 5px #ffe600,
+          0 0 10px #ffe600;
+      }
 
-    /* Footer */
-    footer {
-      background: rgba(0, 0, 0, 0.9);
-      padding: 20px;
-      text-align: center;
-      font-size: 0.9rem;
-      margin-top: 30px;
-    }
+      /* Video Styling */
+      iframe {
+        border: none;
+        border-radius: 10px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+        width: 90%;
+        max-width: 560px;
+      }
 
-    footer p, footer a {
-      text-shadow: 0 0 5px #ffe600, 0 0 10px #ffe600;
-    }
+      /* Buttons */
+      .btn {
+        display: inline-block;
+        padding: 10px 20px;
+        background: #111;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 5px;
+        transition:
+          background 0.3s,
+          transform 0.3s;
+        text-shadow:
+          0 0 5px #ffe600,
+          0 0 10px #ffe600;
+      }
 
-    footer a {
-      color: #fff;
-      margin: 0 10px;
-      text-decoration: none;
-      font-size: 1.2rem;
-      transition: color 0.3s;
-    }
+      .btn:hover {
+        background: #ff7300;
+        transform: scale(1.05);
+      }
 
-    footer a:hover {
-      color: #ffe600;
-    }
-  </style>
-</head>
-<body>
+      /* Footer */
+      footer {
+        background: rgba(0, 0, 0, 0.9);
+        padding: 20px;
+        text-align: center;
+        font-size: 0.9rem;
+        margin-top: 30px;
+      }
 
-  <!-- Navigation Bar -->
-  <nav>
-    <div>
-      <a href="#about" class="glow">About</a>
-      <a href="#history" class="glow">History</a>
-      <a href="#highlights" class="glow">Videos</a>
-    </div>
-    <div>
-      <a href="#feedback" class="glow">Official Website</a>
-    </div>
-  </nav>
+      footer p,
+      footer a {
+        text-shadow:
+          0 0 5px #ffe600,
+          0 0 10px #ffe600;
+      }
 
-  <!-- Hero Section -->
-  <header>
-    <h1>Manchester United: The Best Football Club</h1>
-    <p class="glow">I mean who does not love this club</p>
-    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7a/Manchester_United_FC_crest.svg/1200px-Manchester_United_FC_crest.svg.png" alt="Manchester United Logo">
-  </header>
+      footer a {
+        color: #fff;
+        margin: 0 10px;
+        text-decoration: none;
+        font-size: 1.2rem;
+        transition: color 0.3s;
+      }
 
-  <!-- About Section -->
-  <section id="about">
-    <h2>About</h2>
-    <p class="glow">
-      Manchester United, (AKA "Red Devils") is one of the greatest clubs of all time as they have great legends such as Cristiano Ronaldo, Wayne Rooney, Eric Cantona, and many more. The stadium of Manchester United is called "Old Trafford" which is located in Manchester, England. Old Trafford is known as "The Theatre Of Dreams". It is known as this because its the place where you follow your dreams, glory and happiness. Old Trafford or should I say The Theatre Of Dreams is where Manchester United has built their heart winning history.
-    </p>
-  </section>
+      footer a:hover {
+        color: #ffe600;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Navigation Bar -->
+    <nav>
+      <div>
+        <a href="#about" class="glow">About</a>
+        <a href="#history" class="glow">History</a>
+        <a href="#highlights" class="glow">Videos</a>
+      </div>
+      <div>
+        <a href="#feedback" class="glow">Official Website</a>
+      </div>
+    </nav>
 
-  <!-- History Section -->
-  <section id="history">
-    <h2>History</h2>
-    <p class="glow">
-      Manchester United has won many trophies, have many legends and have had unforgettable games. The club has won 13 Premier League titles, 3 Champions League titles, and 13 FA Cups. They had a great and respective manager named Sir "Alexander Ferguson" who carried them for 27 years (26 seasons) and made them the spotlight for a long time.
-    </p>
-  </section>
+    <!-- Hero Section -->
+    <header>
+      <h1>Manchester United: The Best Football Club</h1>
+      <p class="glow">I mean who does not love this club</p>
+      <img
+        src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7a/Manchester_United_FC_crest.svg/1200px-Manchester_United_FC_crest.svg.png"
+        alt="Manchester United Logo"
+      />
+    </header>
 
-  <!-- Highlights Section -->
-  <section id="highlights">
-    <h2>Videos</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/3y6n4ZloSYk" title="Manchester United Highlights" allowfullscreen></iframe>
-  </section>
+    <!-- About Section -->
+    <section id="about">
+      <h2>About</h2>
+      <p class="glow">
+        Manchester United, (AKA "Red Devils") is one of the greatest clubs of
+        all time as they have great legends such as Cristiano Ronaldo, Wayne
+        Rooney, Eric Cantona, and many more. The stadium of Manchester United is
+        called "Old Trafford" which is located in Manchester, England. Old
+        Trafford is known as "The Theatre Of Dreams". It is known as this
+        because its the place where you follow your dreams, glory and happiness.
+        Old Trafford or should I say The Theatre Of Dreams is where Manchester
+        United has built their heart winning history.
+      </p>
+    </section>
 
-  <!-- Feedback Section -->
-  <section id="feedback">
-    <h2>Explore the Manchester United Official Website</h2>
-    <p class="glow">If you want you can go to the official website to book tickets and buy from the store!</p>
-    <a href="https://www.manutd.com/" class="btn" target="_blank">Explore</a>
-  </section>
+    <!-- History Section -->
+    <section id="history">
+      <h2>History</h2>
+      <p class="glow">
+        Manchester United has won many trophies, have many legends and have had
+        unforgettable games. The club has won 13 Premier League titles, 3
+        Champions League titles, and 13 FA Cups. They had a great and respective
+        manager named Sir "Alexander Ferguson" who carried them for 27 years (26
+        seasons) and made them the spotlight for a long time.
+      </p>
+    </section>
 
-  <!-- Footer -->
-  <footer>
-    <p>Thank you for looking at this website!</p>
-  </footer>
+    <!-- Highlights Section -->
+    <section id="highlights">
+      <h2>Videos</h2>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/3y6n4ZloSYk"
+        title="Manchester United Highlights"
+        allowfullscreen
+      ></iframe>
+    </section>
 
-</body>
+    <!-- Feedback Section -->
+    <section id="feedback">
+      <h2>Explore the Manchester United Official Website</h2>
+      <p class="glow">
+        If you want you can go to the official website to book tickets and buy
+        from the store!
+      </p>
+      <a href="https://www.manutd.com/" class="btn" target="_blank">Explore</a>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+      <p>Thank you for looking at this website!</p>
+    </footer>
+  </body>
 </html>
